--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Salmon Cookies</title>
-  <!-- A custom Google font for highlights --> -->
+  <!-- A custom Google font for highlights --> 
   <!-- A specified standard sans-serif web font for data (such as Arial, Verdana, or Helvetica) -->
   <!-- A specified standard serif web font for text (such as Georgia, Times, etc.) -->
   <!-- Specified different font colors for all three font usages -->
