css and html added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Salmon Cookies</title>
+  <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   <!-- A custom Google font for highlights --> 
   <!-- A specified standard sans-serif web font for data (such as Arial, Verdana, or Helvetica) -->
   <!-- A specified standard serif web font for text (such as Georgia, Times, etc.) -->
@@ -12,5 +14,45 @@
 <body>
   <!-- Be thoughtful about layout and overall organization of the page. -->
   <!-- Include all of the typical stuff that you’ll find on the home page of a business: locations, hours, contact information, some text about how awesome the business is, etc. Be creative, and again, think about what is meaningful to a typical end user. -->
+  <header>
+    <figure id="logo"><img src="images/Logo.png" alt="logo" ></figure>
+    <h1 id="title">Salmon Cookies</h1>
+  </header>
+  <main>
+    <article class="about_us">
+      <h2>About us</h2>
+      <p>We were established by our founder Pat.</p>
+    </article>
+    <article class="hours">
+      <h2>Hours</h2>
+      <p>Days open</p>
+      <ul>
+        <li>Sunday</li>
+        <li>Monday</li>
+        <li>Tuesday</li>
+        <li>Wednesday</li>
+        <li>Thursday</li>
+        <li>Friday</li>
+        <li>Saturday</li>
+      </ul>
+    </article >
+    <article class="location">
+      <h2>locations</h2>
+      <ul>
+        <li>Seattle</li>
+        <li>Tokyo</li>
+        <li>Dubai</li>
+        <li>Paris</li>
+        <li>Lima</li>
+      </ul>
+    </article>
+    <article class="contact">
+      <h2>contact</h2>
+      <p>If you have any question email us at:email or call us at phone #</p>
+    </article>
+  </main>
+  <footer>
+    
+  </footer>
 </body>
 </html>
