--- a/sales.html
+++ b/sales.html
@@ -13,7 +13,29 @@
   </header>
   <main>
     <article>
-      <table id="storeseattle"></table>
+      <table id="storeseattle">
+        <tr>
+          <th>Mon</th>
+          <th>Tues</th>
+          <th>Wed</th>
+          <th>Thurs</th>
+          <th>Fri</th>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </table>
       <form action="">
         <h2>Seattle</h2>
       </form>
