added css elements

--- a/index.html
+++ b/index.html
@@ -23,29 +23,32 @@
       <h2>About us</h2>
       <p>We were established by our founder Pat.</p>
     </article>
-    <article class="hours">
-      <h2>Hours</h2>
-      <p>Days open</p>
-      <ul>
-        <li>Sunday</li>
-        <li>Monday</li>
-        <li>Tuesday</li>
-        <li>Wednesday</li>
-        <li>Thursday</li>
-        <li>Friday</li>
-        <li>Saturday</li>
-      </ul>
-    </article >
-    <article class="location">
-      <h2>locations</h2>
-      <ul>
-        <li>Seattle</li>
-        <li>Tokyo</li>
-        <li>Dubai</li>
-        <li>Paris</li>
-        <li>Lima</li>
-      </ul>
-    </article>
+    <div id="mid">
+      <article class="hours">
+        <h2>Hours</h2>
+        <p>Days open</p>
+        <ul>
+          <li>Sunday</li>
+          <li>Monday</li>
+          <li>Tuesday</li>
+          <li>Wednesday</li>
+          <li>Thursday</li>
+          <li>Friday</li>
+          <li>Saturday</li>
+        </ul>
+      </article >
+      <article class="location">
+        <h2>locations</h2>
+        <ul>
+          <li>Seattle</li>
+          <li>Tokyo</li>
+          <li>Dubai</li>
+          <li>Paris</li>
+          <li>Lima</li>
+        </ul>
+      </article>
+    </div>
+    
     <article class="contact">
       <h2>contact</h2>
       <p>If you have any question email us at:email or call us at phone #</p>
