created const and generated table

--- a/sales.html
+++ b/sales.html
@@ -12,14 +12,14 @@
 
   </header>
   <main>
-    <article>
-      <table id="storeseattle">
-        <tr>
-          <th>Mon</th>
-          <th>Tues</th>
-          <th>Wed</th>
-          <th>Thurs</th>
-          <th>Fri</th>
+    <article>Number of 
+      <table id="tableOne">
+        <!-- <tr>
+          <th>Store</th>
+          <th>min Customer</th>
+          <th>max Customer</th>
+          <th>Avg cookies</th>
+          <th></th>
         </tr>
         <tr>
           <td></td>
@@ -34,32 +34,9 @@
           <td></td>
           <td></td>
           <td></td>
-        </tr>
+        </tr> -->
       </table>
-      <form action="">
-        <h2>Seattle</h2>
-      </form>
-    </article>
-    <article id="storetokyo">
-      <form action="">
-        <h2></h2>
-      </form>
-    </article>
-    <article id="storedubai">
-      <form action="">
-        <h2></h2>
-      </form>
-    </article>
-    <article id="storeparis">
-      <form action="">
-        <h2></h2>
-      </form>
-    </article>
-    <article id="storelima">
-      <form action="">
-        <h2></h2>
-      </form>
-    </article>
   </main>
+  <script src="app.js"></script>
 </body>
 </html>
