got everything but the ttl hours

--- a/sales.html
+++ b/sales.html
@@ -12,7 +12,8 @@
 
   </header>
   <main>
-    <article>Number of 
+    <article>
+      <h1>Number of cookies sold by hour</h1>
       <table id="tableOne">
         <!-- <tr>
           <th>Store</th>
