fixed css, need ttl for all stores for day

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <article class="hours">
         <h2>Hours</h2>
         <p>Days open</p>
-        <ul>
+        <ul class="days">
           <li>Sunday</li>
           <li>Monday</li>
           <li>Tuesday</li>
@@ -35,6 +35,15 @@
           <li>Thursday</li>
           <li>Friday</li>
           <li>Saturday</li>
+        </ul>
+        <ul class="time">
+          <li>6am - 8pm</li>
+          <li>6am - 8pm</li>
+          <li>6am - 8pm</li>
+          <li>6am - 8pm</li>
+          <li>6am - 8pm</li>
+          <li>6am - 8pm</li>
+          <li>6am - 8pm</li>
         </ul>
       </article >
       <article class="location">
