--- a/sales.html
+++ b/sales.html
@@ -7,35 +7,15 @@
   <link rel="stylesheet" href="style.css">
   <title>Sales</title>
 </head>
-<body>
+<body style="background-color: rgba(112, 95, 95, 0.699);">
   <header>
 
   </header>
   <main>
     <article>
-      <h1>Number of cookies sold by hour</h1>
+      <h1 id="salesHeader">Number of cookies sold by hour</h1>
       <table id="tableOne">
-        <!-- <tr>
-          <th>Store</th>
-          <th>min Customer</th>
-          <th>max Customer</th>
-          <th>Avg cookies</th>
-          <th></th>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr> -->
+       
       </table>
   </main>
   <script src="app.js"></script>
