--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
   <!-- Be thoughtful about layout and overall organization of the page. -->
   <!-- Include all of the typical stuff that you’ll find on the home page of a business: locations, hours, contact information, some text about how awesome the business is, etc. Be creative, and again, think about what is meaningful to a typical end user. -->
   <header>
-    <figure id="logo"><img src="images/Logo.png" alt="logo" ></figure>
+    <figure id="logo"><img src="images/salmon.png" alt="logo" ></figure>
     <h1 id="title">Salmon Cookies</h1>
   </header>
   <main>
     <article class="about_us">
+      <img src="images/family.jpg" alt="">
       <h2>About us</h2>
-      <p>We were established by our founder Pat.</p>
+      <p>We were established by our founder Pat. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
     </article>
     <div id="mid">
       <article class="hours">
@@ -55,6 +56,20 @@
           <li>Paris</li>
           <li>Lima</li>
         </ul>
+      </article>
+      <article class="cutter">
+        <figure>
+          <p>Checkout this neat cookie cutter we sell!</p>
+          <img src="images/cutter.jpeg" alt="">
+        </figure>
+        <figure>
+          <p>Cookie cutter a you could make your own Cookies</p>
+          <img src="images/frosted-cookie.jpg" alt="">
+        </figure>
+        <figure class="shirt">
+          <p>Checkout this cool shirt</p>
+          <img src="images/shirt.jpg" alt=" ">
+        </figure>
       </article>
     </div>
     
