did some dry on js code

--- a/index.html
+++ b/index.html
@@ -61,18 +61,20 @@
         <figure>
           <p>Checkout this neat cookie cutter we sell!</p>
           <img src="images/cutter.jpeg" alt="">
+          <button type="submit">Click here to buy</button>
         </figure>
         <figure>
-          <p>Cookie cutter a you could make your own Cookies</p>
+          <p>We now deliver!</p>
           <img src="images/frosted-cookie.jpg" alt="">
+          <button type="submit">Get cookies</button>
         </figure>
         <figure class="shirt">
           <p>Checkout this cool shirt</p>
           <img src="images/shirt.jpg" alt=" ">
+          <button type="submit">Click here to buy</button>
         </figure>
       </article>
     </div>
-    
     <article class="contact">
       <h2>contact</h2>
       <p>If you have any question email us at:email or call us at phone #</p>
