got it to console log submissions

--- a/sales.html
+++ b/sales.html
@@ -17,6 +17,21 @@
       <table id="tableOne">
        
       </table>
+      <!-- Create a new HTML form to accept the information for a new cookie stand.  -->
+      
+      <form id="nameForm">
+        <fieldset>
+          <label for="storeName">Enter store name</label>
+          <input name="store" type="text">
+          <label for="maxCust">Enter Max customers</label>
+          <input name="max" type="number">
+          <label for="minCust">Enter Min customers</label>
+          <input name="min" type="number">
+          <label for="avgCookies">Enter avg cookies sold</label>
+          <input name="avgSold"  type="number">
+          <button type="submit">Submit</button>
+        </fieldset>
+      </form>
   </main>
   <script src="app.js"></script>
 </body>
